# endpt

./: AGENTS.md  LICENSE  PLAN.md  README.md  README_DIFF_APIARK.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  grpc.rs  mod.rs  network.rs  stream.rs
src-tauri/src/models/: mod.rs
src/components/: AppErrorBoundary.tsx  AppTopbar.tsx  AuthEditor.tsx  BodyEditor.tsx  EnvAutocompleteField.tsx  EnvironmentManager.tsx  FolderItem.tsx  GrpcRequestEditor.tsx  HeadersEditor.tsx  JsonTree.tsx  KeyValueRowsEditor.tsx  ParamsEditor.tsx  RequestEditor.tsx  RequestTabs.tsx  ResponsePane.tsx  Sidebar.tsx  SseRequestEditor.tsx  ThemeToggle.tsx  UpdateChecker.tsx  WebSocketRequestEditor.tsx
src/components/__tests__/: environment-features.test.tsx  request-editor-env.test.tsx  request-editor-protocols.test.tsx  setup.ts  store.test.ts
src/components/ui/: badge.tsx  button.tsx  input.tsx  select.tsx
src/constants/: methods.ts  protocols.ts
src/lib/: utils.ts
src/services/: env-resolver.ts  ipc.ts  request-builder.ts
src/services/__tests__/: env-resolver.test.ts
src/store/: defaults.ts  useRealtimeStore.ts  useThemeStore.ts  useWorkspaceStore.ts
src/types/: index.ts
